--- a/sass/layout/_userinfo.scss
+++ b/sass/layout/_userinfo.scss
@@ -187,10 +187,10 @@
     &__area {
         display: block;
 
-        details {
+        .accordion-item{
             width: 400px;
 
-            summary {
+            dt{
                 display: flex;
                 justify-content: space-between;
                 border: solid 2px $border-color;
@@ -198,29 +198,47 @@
                 font-size: 1.5em;
                 color: $black-color;
                 cursor: pointer;
-                
+
                 img {
                     width: 30px;
                 }
 
-                img:after {
-                    transform: rotate(180deg);
+                &::after {
+                    content: "";
+                    display: block;
+                    width: 2rem;
+                    height: 1rem;
+                    margin-top: 0.8rem;
+                    margin-left: auto;
+                    background: url(../img/arrow_down_red.svg) no-repeat center center / contain;
+                    transition: 0.2s;
+                }
+
+                &.-active {
+                    color: $primary-color;
+
+                    &::after {
+                        transform: rotate(180deg);
+                    }
                 }
             }
 
-            summary.register-base-top {
-                border-bottom: none;
+            .register-base-bottom{
+                border-top: none;
             }
-
             .resister-base-contents {
                 border-right: solid 2px $border-color;
                 border-left: solid 2px $border-color;
+                border-top: none;
+                border-bottom: solid 2px $border-color;
             }
         }
-        details summary{
+
+        details summary {
             list-style: none;
         }
-        details summary::-webkit-details-marker{
+
+        details summary::-webkit-details-marker {
             display: none;
         }
 
