--- a/sass/layout/_userinfo.scss
+++ b/sass/layout/_userinfo.scss
@@ -144,6 +144,7 @@
                 margin: 30px 20%;
                 width: auto;
             }
+
         }
     }
 
@@ -453,7 +454,7 @@
 
                 input {
                     padding: 0.3em;
-                    border: solid 0.1px $border-color;
+                    border: solid 1px $border-color;
                     border-radius: 5px;
                     margin: 10px 5%;
                     width: 300px;
@@ -610,12 +611,12 @@
 
                 input {
                     padding: 0.3em;
-                    border: solid 0.1px $border-color;
+                    border: solid 1px $border-color;
                     border-radius: 5px;
                     margin: 10px 5%;
                     font-size: 1em;
                     width: 90%;
-                    height: 100%;
+                    height: 23px;
                 }
             }
         }
